first attempts at integrating leaflet.draw to take care of drawing cropfeatures for me

--- a/communitree_app/templates/communitree_app/index.html
+++ b/communitree_app/templates/communitree_app/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
     <link rel="stylesheet" href="{% static "communitree_app/style.css" %}" />
     <link rel="stylesheet" href="{% static "communitree_app/CropDisplayControl.css" %}" />
+    <link rel="stylesheet" href="{% static "communitree_app/leaflet.draw.css" %}" />
 
 </head>
 <body>
@@ -15,6 +16,7 @@
 <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 <script src="{% static "communitree_app/CropDisplayControl.js" %}" ></script>
 <script src="{% static "communitree_app/CropFeature.js" %}" ></script>
+<script src="{% static "communitree_app/leaflet.draw.js" %}" ></script>
 <script src="{% static "communitree_app/CommunitreeMain.js" %}" ></script>
 </body>
 </html>
