--- a/communitree_app/templates/communitree_app/index.html
+++ b/communitree_app/templates/communitree_app/index.html
@@ -13,6 +13,8 @@
 <body>
 <div id="map"></div>
 <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
 <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 <script src="{% static "communitree_app/leaflet.draw.js" %}" ></script>
 <script src="{% static "communitree_app/CropDisplayControl.js" %}" ></script>
