--- a/communitree_app/static/communitree_app/style.css
+++ b/communitree_app/static/communitree_app/style.css
@@ -2,8 +2,25 @@ body {
     padding: 0;
     margin: 0;
 }
-html, body, #map {
+#map {
+    position:relative;
+    width:  70%;
+    height: 100%;
+    overflow-x: hidden;
+    z-index: 1;
+}
+
+html, body  {
     width:  100%;
     height: 100%;
 }
 
+#interact {
+    position:absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 20%;
+    background: #eee;
+    overflow-y: auto;
+}
