CropDisplayView.js, CropsInMapView.js -- minor cleanup, touchup communitree.js, views.py, urls.py -- Moved code to obtain crops within the current map bounds to a new view, CropsByBounds, and obviously changed the ajax call URL. style.css: just some tweaks. index.html: tweak for learning, added a class to the crop view element. removed some unneeded commented-out scripts.

--- a/communitree_app/communitree-brunch/app/style.css
+++ b/communitree_app/communitree-brunch/app/style.css
@@ -20,7 +20,8 @@ html, body  {
     top: 0;
     right: 0;
     bottom: 0;
-    width: 20%;
-    background: #eee;
+    width: 30%;
+    background: #e7f4dc;
     overflow-y: auto;
+    font-family: Arial;
 }
