--- a/communitree_app/templates/communitree_app/index.html
+++ b/communitree_app/templates/communitree_app/index.html
@@ -10,18 +10,9 @@
 <body>
 <div id="map"></div>
 <div id="interact">
-    <p>This is where all the user interface goes.</p>
+    <p class="placeholder">This is where all the user interface goes.</p>
 </div>
 <script src="{% static "communitree_app/app.js" %}" ></script>
 <script type="text/javascript">require('initialize')</script>
-<!-- <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
-<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
-<script src="{% static "communitree_app/leaflet.draw.js" %}" ></script>
-<script src="{% static "communitree_app/CropDisplayControl.js" %}" ></script>
-<script src="{% static "communitree_app/CropFeature.js" %}" ></script>
-<script src="{% static "communitree_app/CommunitreeMain.js" %}" ></script>
--->
 </body>
 </html>
